--- a/ex5.html
+++ b/ex5.html
@@ -34,8 +34,8 @@
         
         <script>
            // add code here
-           function mOver(){
-            var x = getat
+           function mOver(obj){
+          
             obj.id='square'
             obj.style.paddingTop='20px'
            }
